[package]
name = "todo"
version = "2.0.1"
edition = "2021"
authors = ["USpiri <urielspiridione135@gmail.com>"]
description = "A simple command-line todo list written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5"
serde_json = "1.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]